BUG CORE-184, CORE-51: Column chart legend overlaps horiz. scroll bar.
QA: Bug should be fixed.

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -100,7 +100,7 @@
         overflow-y: auto
     &.bottom
       position: absolute
-      bottom: 0
+      bottom: 1.5em
     &.top
       position: absolute
       top: 1em
